fix(cors): centraliza CORS no Spring e remove headers do proxy
- adiciona CorsConfigurationSource com allowedOriginPatterns para https://oficina.flipafile.com
- permite OPTIONS globalmente e cacheia preflight (maxAge=3600)
- remove FilterRegistrationBean<CorsFilter> para evitar duplicidade
- limpa CORS do Nginx Proxy Manager (sem add_header/return 204)
- mantém NPM apenas como TLS + reverse proxy

BREAKING CHANGE: configurações de CORS anteriores no proxy devem ser removidas